force-app/main/default/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CUB_Domestic_Campaign</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>專案到期</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>拒絕</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>無效</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Domestic_Self_Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>拒絕</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>無效</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Oversea_Campaign</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>拒絕</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>無效</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Oversea_Self_Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>拒絕</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>無效</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Referral_Domestic_Branch</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>轉介商機不承接</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Referral_Domestic_Company</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>轉介商機不承接</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Referral_Domestic_Individual</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>轉介商機不承接</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CUB_Transnational_Referral</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>轉介商機不承接</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>商機已轉換</fullName>
        </values>
        <values>
            <fullName>客戶已被開發</fullName>
        </values>
        <values>
            <fullName>尚未聯繫</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>已電訪</fullName>
        </values>
        <values>
            <fullName>有效商機</fullName>
        </values>
        <values>
            <fullName>轉介商機不承接</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>承接日期時間(分行轉介)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>開戶狀態</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <label>指派Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VN_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRANCHCODE__c</fullName>
        <label>轉介人分行代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Potential__c</fullName>
        <label>債券潛力</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Referral_No__c</fullName>
        <label>轉介單號(分行轉介)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bsn_Cbsm_P__c</fullName>
        <label>區部帳務號碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>公司地址</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>客群</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Alert_Day__c</fullName>
        <formula>Related_Campaign__r.Campaign_End_Date__c - 10</formula>
        <label>名單開發提醒日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_No__c</fullName>
        <formula>Related_Campaign__r.Campaign_No__c</formula>
        <label>行銷活動編號</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Result__c</fullName>
        <label>行銷成果</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>結案日期時間(分行轉介)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitor_Id__c</fullName>
        <label>交易對手統編</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>交易對手公司名稱</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_VIP__c</fullName>
        <label>信用卡VIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Country__c</fullName>
        <label>商機所屬國別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CUB_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>客戶ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mask_Id__c</fullName>
        <label>客戶統編隱碼</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Date__c</fullName>
        <label>資料擷取月</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Avg__c</fullName>
        <label>近一年平均存款</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Foreign__c</fullName>
        <label>近一年外幣帳戶平均存款(折合台幣)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_NTD__c</fullName>
        <label>近一年台幣帳戶平均存款</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Develop_Remark__c</fullName>
        <label>說明欄</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Deadline__c</fullName>
        <formula>Related_Campaign__r.Campaign_End_Date__c</formula>
        <label>開發期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribute_Bsn_District__c</fullName>
        <label>派發大地理區</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribute_Division__c</fullName>
        <label>派發區部</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribute_Team_Cbsm__c</fullName>
        <label>派發科別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Remark__c</fullName>
        <label>派發註記</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Status__c</fullName>
        <formula>IF(ISPICKVAL($User.Belong_Country__c, &quot;TW&quot;), 
  IF(BEGINS(OwnerId, &quot;005&quot;), &quot;已派發至指定人員&quot;, &quot;仍在Queue中&quot;),
  IF(BEGINS(OwnerId, &quot;005&quot;), &quot;Has Distributed to Designated User&quot;, &quot;Still in Queue&quot;)
)</formula>
        <label>派發狀態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dp_M_Branch_Name__c</fullName>
        <label>最大存款行</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dp_M_Bsn__c</fullName>
        <label>最大存款行區部</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Lead_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>當此欄位被勾起時，表示此商機可能有其他人正進行開發</inlineHelpText>
        <label>有重複商機存在</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Establish_Date__c</fullName>
        <label>公司設立日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fm_Branch_Name__c</fullName>
        <label>經管理專所屬分行</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fm_Emp_Code__c</fullName>
        <label>經管理專員編</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fm_Name__c</fullName>
        <label>經管理專姓名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fm_Status__c</fullName>
        <label>理專經管狀態</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Physique__c</fullName>
        <label>體質良好</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hedging_Potential__c</fullName>
        <label>高避險潛力</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Tax_Amount__c</fullName>
        <label>高繳稅額</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <label>客戶統編類型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ID_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduce_Date__c</fullName>
        <label>轉介單建立日期時間(分行轉介)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Introduce_Invalid_Date__c</fullName>
        <formula>DATETIMEVALUE(ADDMONTHS(CreatedDate, 6) - 1)</formula>
        <label>轉介單到期日(法金轉介)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investment_Potential__c</fullName>
        <label>高投資理財潛力</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Customer_Relation__c</fullName>
        <label>與客戶KYC關係類別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K1</fullName>
                    <label>單位授信戶</label>
                </value>
                <value>
                    <fullName>K2</fullName>
                    <label>單位授信戶之關係戶</label>
                </value>
                <value>
                    <fullName>K3</fullName>
                    <label>拜訪中客戶</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Industry__c</fullName>
        <label>重點產業</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Expired__c</fullName>
        <formula>Related_Campaign__r.Campaign_End_Date__c &lt; TODAY()</formula>
        <label>專案到期</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Notes__c</fullName>
        <label>商機備註</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Employee_No__c</fullName>
        <formula>Owner:User.Employee_No__c</formula>
        <label>商機擁有者員編</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_No__c</fullName>
        <formula>TEXT(Status)</formula>
        <label>開發狀態編號</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Team__c</fullName>
        <label>商機所屬科別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Luxury_Residence__c</fullName>
        <label>持有高價住宅</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Division__c</fullName>
        <label>經管理專所屬區部</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Branch_Name__c</fullName>
        <label>鄰近分行</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Bsn__c</fullName>
        <label>鄰近分行區部</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note1__c</fullName>
        <label>備註1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note2__c</fullName>
        <label>備註2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note3__c</fullName>
        <label>備註3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>其他原因</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>其他</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Unit_Change__c</fullName>
        <formula>AND(
  BEGINS(OwnerId, &quot;005&quot;), 
  TEXT(Owner:User.Team__c) != TEXT(Lead_Team__c)
)</formula>
        <label>商機擁有者單位異動</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI_Specialist__c</fullName>
        <label>PI專投</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESSDESC__c</fullName>
        <formula>Owner:User.LastName &amp; Owner:User.FirstName &amp; &quot; &quot; &amp; TEXT(DATEVALUE(CreatedDate))</formula>
        <label>說明歷程</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>戶籍地址</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <label>負責人姓名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Type__c</fullName>
        <label>潛力類別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Lead_Status__c</fullName>
        <label>前一商機狀態</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>商品代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lock_Period__c</fullName>
        <label>商品鎖定月數</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>承接人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Receive_RM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receive_Unit_Picklist__c</fullName>
        <label>承接單位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiver_Id_Formula__c</fullName>
        <formula>Receive_RM__r.Employee_No__c</formula>
        <label>承接人員編</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Role_Name__c</fullName>
        <label>承接人角色名稱</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Role__c</fullName>
        <label>承接人角色</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Case_No__c</fullName>
        <displayFormat>CUB_{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Salesforce轉介單號</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>轉介日期時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_Id_Formula__c</fullName>
        <formula>Referrer_Name__r.Employee_No__c</formula>
        <label>轉介人員編(法金轉介)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Item__c</fullName>
        <label>轉介商品名稱</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pd42</fullName>
                    <default>true</default>
                    <label>pd42: 複雜型法人授信</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Record_Status__c</fullName>
        <label>轉介單狀態</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Rejected_Reason__c</fullName>
        <label>不承接原因</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Result__c</fullName>
        <label>轉介結果</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>商機轉介狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R2</fullName>
                    <label>審核中</label>
                </value>
                <value>
                    <fullName>R3</fullName>
                    <label>審核退回</label>
                </value>
                <value>
                    <fullName>R4</fullName>
                    <label>承接單位派發中</label>
                </value>
                <value>
                    <fullName>R5</fullName>
                    <label>已指派承接RM</label>
                </value>
                <value>
                    <fullName>R6</fullName>
                    <label>不承接此轉介</label>
                </value>
                <value>
                    <fullName>R7</fullName>
                    <label>轉介關係成立</label>
                </value>
                <value>
                    <fullName>R1</fullName>
                    <default>true</default>
                    <label>轉介商機建立</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Suggestion__c</fullName>
        <label>轉介建議</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_System_No__c</fullName>
        <label>轉介系統唯一序號</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Title__c</fullName>
        <label>轉介人職稱</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Validate_Reason__c</fullName>
        <label>轉介檢核原因</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrer_Employee_No_Text__c</fullName>
        <label>轉介人員編(分行轉介)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>轉介人(法金轉介)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrer_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Role_Name__c</fullName>
        <label>轉介人角色名稱</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Role__c</fullName>
        <label>轉介人角色</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Unit__c</fullName>
        <label>轉介單位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Country__c</fullName>
        <label>註冊國別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason_No__c</fullName>
        <formula>TEXT(Rejected_Reason__c)</formula>
        <label>拒絕原因編號</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>拒絕原因</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E1</fullName>
                    <label>暫無需求</label>
                </value>
                <value>
                    <fullName>E2</fullName>
                    <label>利率因素暫無申辦意願</label>
                </value>
                <value>
                    <fullName>E3</fullName>
                    <label>額度因素暫無申辦意願</label>
                </value>
                <value>
                    <fullName>E4</fullName>
                    <label>已有主力往來銀行暫無申辦意願</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rel_Customer_Name__c</fullName>
        <label>企業關聯人姓名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Desc__c</fullName>
        <label>企業關聯人職稱</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>相關帳戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (相關帳戶)</relationshipLabel>
        <relationshipName>Related_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>行銷活動名稱</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Related_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>相關集團</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (相關集團)</relationshipLabel>
        <relationshipName>Related_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Concern__c</fullName>
        <label>風險關注</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALESBRAREACODE__c</fullName>
        <label>承接人分行區部代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALESBRCODE__c</fullName>
        <label>承接人分行代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Transfer_Potential__c</fullName>
        <label>薪轉潛力</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Area__c</fullName>
        <label>同一大地理區</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Lead_Id__c</fullName>
        <label>名單Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>產業小類</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggest_Disp_Branch__c</fullName>
        <label>建議派發分行</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELLERBRAREACODE__c</fullName>
        <label>轉介人分行區部代碼</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMRAC__c</fullName>
        <formula>IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Oversea TMRAC Campaign&quot;), TRUE, FALSE)</formula>
        <label>TMRAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Industry__c</fullName>
        <label>目標產業</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>稅編號碼</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>層級</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Capital_Amt__c</fullName>
        <label>資本額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Export_Value_Lastyear__c</fullName>
        <label>出口實績(去年度)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Export_Value__c</fullName>
        <label>出口實績(資料擷取至某月)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Import_Value_Lastyear__c</fullName>
        <label>進口實績(去年度)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Import_Value__c</fullName>
        <label>進口實績(資料擷取至某月)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Potential__c</fullName>
        <label>貿融潛力</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason_No__c</fullName>
        <formula>TEXT(Unqualified_Reason__c)</formula>
        <label>無效原因編號</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason_Remarks__c</fullName>
        <label>無效原因說明</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>無效原因</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D1</fullName>
                    <label>先前具客訴紀錄</label>
                </value>
                <value>
                    <fullName>D2</fullName>
                    <label>無法聯繫上客戶</label>
                </value>
                <value>
                    <fullName>D3</fullName>
                    <label>曾有案件未過審記錄</label>
                </value>
                <value>
                    <fullName>D4</fullName>
                    <label>年營收規模小於5,000萬</label>
                </value>
                <value>
                    <fullName>D5</fullName>
                    <label>財報或營收結構不佳</label>
                </value>
                <value>
                    <fullName>D6</fullName>
                    <label>其他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Call_Date__c</fullName>
        <label>初次電訪日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Called__c</fullName>
        <defaultValue>false</defaultValue>
        <label>已初次電訪</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ICC604_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch-ICC Team</label>
        <queue>VN_ICC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VN604_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch-VN Team</label>
        <queue>VN_VN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VN_ICC_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch-ICC Team</label>
        <queue>VN_ICC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VN_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch</label>
        <queue>VN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VN_VN_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch-VN Team</label>
        <queue>VN_VN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X604_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>VN Branch</label>
        <queue>VN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X721_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>北二區</label>
        <queue>X721</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X722_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>產二區</label>
        <queue>X722</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X725_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>產三區</label>
        <queue>X725</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X726_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>北三區</label>
        <queue>X726</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X728_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>產一區</label>
        <queue>X728</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>